            - add rem base to font-size,
            - remove undeline in links, instead use border
    
    commit #16.5.8
        18 May, 2016
        fixing errors show up while testing
        - add list style to widget
        - add q, tt elements
        - redesign code element
    
    commit #16.5.9
    20 May, 2016
        - fixing errors show up while testing
        =accessiblilty==
            -change assistive text on single post
            -add Ubuntu font family as fallback
            -clean up breadcrumb
            -add more understandable title to search page
        ==typography==
            (inspiration: https://www.smashingmagazine.com/2009/04/8-simple-ways-to-improve-typography-in-your-designs/)
            -font size and line height calibration
            -heading size calibration
            -invert archive titles
        ==design==
            -adopt colours to color palette
        -add translations to new texts.
        
        commit #16.5.10
        20 May, 2016
            ==bug==
                -submenu wasnot displayed properly if width < 960px
            ==typography==
                -breadcrumb last item strong
                
        commit #16.5.11
        21 May, 2016
        Upladed to repository as 16.5
            ==validation==
                -check with validator checker
                -delete itemprop values
                -delete unnecessary WAI-ARIA
            ==responsivie design==
                -correct margins
            ==prepare to upload to WordPress repository
            -refresh screenshot,
            -new: screenshot for moblie
            -minify css
            

    commit #16.5.13
    27 May, 2016
    This was uploaded to repository as 16.5.2
        == bugs ==
            -menu dropdown was not displayed in mobile
            -tag.php runds into fatal error
            -I made header #s individual (the same in widget) also corrected in css
        
        
Version 16.6    
    
        