@@ -39,8 +39,8 @@
 				
 				<form role="search" method="get" id="searchform" class="searchform" action="<?php echo esc_url( home_url( '/' ) ); ?>">
 				<div>
-					<label class="screen-reader-text" for="manduca-s" ><?php _e( 'Search', 'manduca' ) ?></label>
-					<input type="text" placeholder="<?php _e( 'Search', 'manduca' ) ?>" value="<?php echo get_search_query(); ?>" name="manduca-s"  id="manduca-s" />
+					<label class="screen-reader-text" for="s" ><?php _e( 'Search', 'manduca' ) ?></label>
+					<input type="text" placeholder="<?php _e( 'Search', 'manduca' ) ?>" value="<?php echo get_search_query(); ?>" name="s"  id="s" />
 					<input type="submit" class="search-submit" id="search-submit" value="&#xf002;" aria-label="<?php _e( 'Start search', 'manduca' ) ?>" />
 				</div>
 			</form>
